--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,8 @@ version: '${version}'
 main: fr.pixelqilin.pixelqilinranked.PixelQilinRanked
 api-version: 1.16
 authors: [ Ordwen ]
+depend:
+  - "Multiverse-Core"
 commands:
   ranked:
     description: default player command
